--- a/covid19.html
+++ b/covid19.html
@@ -1,3 +1,4 @@
+
 <!-- COVID-19 specialPage
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -91,6 +92,12 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
 <p>
  <a class="w3-button w3-blue" href="https://forma.gov.gr/" target="_top">forma</a>
   <a class="w3-button w3-red" href="https://ethelontes.gov.gr/" target="_top">ethelontes</a>
+   <br><span class="w3-xxlarge">maps</span><br>
+<p>
+ <a class="w3-button w3-blue" href="http://www.cidrap.umn.edu/covid-19/maps-visuals" target="_top">maps</a>
+ <a class="w3-button w3-blue" href="https://coronavirus.pineza.eu/" target="_top">pineza</a>
+ <a class="w3-button w3-blue" href="https://www.bing.com/covid" target="_top">microsoft</a>
+  <a class="w3-button w3-blue" href="https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/world-map.html" target="_top">cdc</a>
 </div>
 
 <span class="w3-hide-small">
