--- a/covid19.html
+++ b/covid19.html
@@ -79,18 +79,18 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-xxlarge">COVID-19</span><br>
+    <span class="w3-xlarge">COVID-19</span>
 <p>
  <a class="w3-button w3-red" href="https://g.co/kgs/9sL5t1" target="_top">Google Results</a>
   <a class="w3-button w3-blue" href="https://www.who.int/"> who</a>
     <a class="w3-button w3-blue" href="https://www.civilprotection.gr/el"> civilprotection</a>
   <a class="w3-button w3-green" href="https://webcache.googleusercontent.com/search?q=cache:https://eody.gov.gr/neos-koronaios-covid-19/">eody</a>
 </p>
- <span class="w3-xxlarge">lockdown</span><br>
+ <span class="w3-xlarge">lockdown</span>
 <p>
  <a class="w3-button w3-blue" href="https://forma.gov.gr/" target="_top">forma</a>
   <a class="w3-button w3-red" href="https://ethelontes.gov.gr/" target="_top">ethelontes</a>
-   <br><span class="w3-xxlarge">maps</span><br>
+   <br><span class="w3-xlarge">maps</span>
 <p>
  <a class="w3-button w3-green" href="http://www.cidrap.umn.edu/covid-19/maps-visuals" target="_top">maps</a>
  <a class="w3-button w3-blue" href="https://coronavirus.pineza.eu/" target="_top">pineza</a>	
