--- a/covid19.html
+++ b/covid19.html
@@ -31,6 +31,7 @@ body, html { height: 100%; line-height: 1.8;}
 </style>
 <body>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// --> <!-- Load Facebook SDK for JavaScript -->
+<!--
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -39,14 +40,14 @@ body, html { height: 100%; line-height: 1.8;}
   js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<!-- Your customer chat code -->
+<!-- Your customer chat code -- >
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
   theme_color="#A9A9A9"
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
-</div>
+</div> -->
 <!--  ////////////////////// messenger_platform  //////////////////////// -->
 <!-- ////////////////////////// Navbar ////////////////////////// -->
 <!-- Top menu -->
@@ -86,10 +87,7 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
     <a class="w3-button w3-blue" href="https://www.civilprotection.gr/el"> civilprotection</a>
   <a class="w3-button w3-green" href="https://webcache.googleusercontent.com/search?q=cache:https://eody.gov.gr/neos-koronaios-covid-19/">eody</a>
 </p>
- <span class="w3-xlarge">lockdown</span>
-<p>
- <a class="w3-button w3-blue" href="https://forma.gov.gr/" target="_top">forma</a>
-  <a class="w3-button w3-red" href="https://ethelontes.gov.gr/" target="_top">ethelontes</a>
+ 
    <br><span class="w3-xlarge">maps</span>
 <p>
  <a class="w3-button w3-green" href="http://www.cidrap.umn.edu/covid-19/maps-visuals" target="_top">maps</a>
